--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br" class="light">
   <head>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href=" styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -10,60 +8,62 @@
       rel="stylesheet"
     />
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projeto</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
+
   <body>
-    <header>
-      <div id="container">
-        <div id="profile">
-          <img
-            src="./assets/avatar.png"
-            alt="Avatar de login com foto do usuário."
-          />
-          <p>@kcg.r</p>
-        </div>
-        <div id="switch" onclick="toggleMode()">
-          <button id="bnt" type="button"></button>
-          <span></span>
-        </div>
-        <ul>
-          <li>
-            <a href="#">Inscreva-se</a>
-          </li>
-          <li>
-            <a href="#">Baixar o e-book</a>
-          </li>
-          <li>
-            <a href="#">Ver meu portifólio</a>
-          </li>
-          <li>
-            <a href="#">Ir para o explorer</a>
-          </li>
-        </ul>
-        <div id="sociallinks">
-          <a href="https://github.com/profKeRibeiro/" target="_blank">
-            <ion-icon name="logo-github"></ion-icon>
-          </a>
-          <a href="https://www.instagram.com/kelly.ribeiro_/" target="_blank">
-            <ion-icon name="logo-instagram"></ion-icon>
-          </a>
-          <a href="#" target="_blank">
-            <ion-icon name="logo-youtube"></ion-icon>
-          </a>
-          <a
-            href="https://www.linkedin.com/in/kelly-cristina-gon%C3%A7alves-ribeiro-7352a5114/"
-            target="_blank"
-          >
-            <ion-icon name="logo-linkedin"></ion-icon>
-          </a>
-        </div>
+    <div id="container">
+      <div id="profile">
+        <img
+          src="./assets/avatar.png"
+          alt="Avatar de login com foto do usuário."
+        />
+        <p>@kcg.r</p>
       </div>
-    </header>
-    <footer>
-      Feito com ♥ pela
-      <a href="https://rocketseat.com.br" target="_blank">Rocketseat</a>
-    </footer>
+      <div id="switch" onclick="toggleMode()">
+        <button id="bnt" type="button"></button>
+        <span></span>
+      </div>
+      <ul>
+        <li>
+          <a href="#">Inscreva-se</a>
+        </li>
+        <li>
+          <a href="#">Baixar o e-book</a>
+        </li>
+        <li>
+          <a href="#">Ver meu portifólio</a>
+        </li>
+        <li>
+          <a href="#">Ir para o explorer</a>
+        </li>
+      </ul>
+      <div id="social-links">
+        <a href="https://github.com/profKeRibeiro/" target="_blank">
+          <ion-icon name="logo-github"></ion-icon>
+        </a>
+        <a href="https://www.instagram.com/kelly.ribeiro_/" target="_blank">
+          <ion-icon name="logo-instagram"></ion-icon>
+        </a>
+        <a href="#" target="_blank">
+          <ion-icon name="logo-youtube"></ion-icon>
+        </a>
+        <a
+          href="https://www.linkedin.com/in/kelly-cristina-gon%C3%A7alves-ribeiro-7352a5114/"
+          target="_blank"
+        >
+          <ion-icon name="logo-linkedin"></ion-icon>
+        </a>
+      </div>
+      <footer>
+        Feito com ♥ pela
+        <a href="https://rocketseat.com.br" target="_blank">Rocketseat</a>
+      </footer>
+    </div>
+
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
