--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           src="./assets/avatar-light.png"
           alt="Avatar de login com foto do usuário."
         />
-        <a href="https://www.flaticon.com/br/icones-gratis/do-utilizador" title="do utilizador ícones">Do utilizador ícones criados por Freepik - Flaticon</a>
+        <!-- <a href="https://www.flaticon.com/br/icones-gratis/do-utilizador" title="do utilizador ícones">Do utilizador ícones criados por Freepik - Flaticon</a> -->
         <p>@kcg.r</p>
       </div>
       <div id="switch" onclick="toggleMode()">
